fixed ui issues in dark mode

--- a/packages/client-core/src/user/components/UserMenu/index.module.scss
+++ b/packages/client-core/src/user/components/UserMenu/index.module.scss
@@ -836,7 +836,7 @@
 
         :global(.MuiCheckbox-root) {
           padding: 0;
-          color: var(--buttonOutlined);
+          color: var(--sidebarSelectedBackground);
           margin-right: 10px;
 
           svg {
@@ -2423,7 +2423,7 @@
 
 .collapseBtn {
   background-color: transparent !important;
-  color: var(--buttonOutlined);
+  color: var(--textColor);
 }
 
 .tableRow {
@@ -2466,4 +2466,8 @@
   font-size: 14px;
   margin-right: 7px;
   margin-top: 7px;
+}
+
+.iconBtn {
+  color: var(--sidebarSelectedBackground) !important;
 }
